# plugin-template

./: README.md  pyproject.toml
src/plugin-template/: __init__.py  plugin.py
